fixed breadcrumb spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -240,7 +240,6 @@ img.resize {
 }
 
 .breadcrumb {
-    width: 100%;
     margin-left: -15px;
     margin-right: -15px;
 }
